EPBDS-16012 Search ancestor files up to the repository root